# SpaceForgeOS

./: .gitignore  .gitmodules  README.MD  mc_output1.csv
Sim/: CMakeLists.txt  run.sh
Sim/include/: Battery.hpp  PowerBus.hpp  SimulationEngine.hpp  SolarArray.hpp  Subsystem.hpp  TelemetryLogger.hpp  TickContext.hpp
Sim/src/: Battery.cpp  PowerBus.cpp  SimulationEngine.cpp  SolarArray.cpp  TelemetryLogger.cpp  main.cpp
backend/: main.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/components/: OrbitDisplay.tsx
client/src/pages/: FactoryOrbitSim.tsx
client/src/types/: types.ts
cpp_core/: CMakeLists.txt
cpp_core/assets/surf/: flat_disk.surf  wafer_150mm_z-1.0.surf
cpp_core/include/: DepositionModule.hpp  IonImplantationModule.hpp  Logger.hpp  OrbitModel.hpp  PowerBus.hpp  PowerModule.hpp  Task.hpp
cpp_core/scrapped/: CrystalGrowthModule.hpp  IonImplantationModule.hpp  IonImplantationModule_debug_log.txt  ion_implantation_model.cpp  oldmain.cpp
cpp_core/src/: Logger.cpp  PowerBus.cpp  PowerModule.cpp  deposition_debug_log.txt  deposition_model.cpp  ion_implantation_model.cpp  main.cpp  power_model.cpp  power_module_testing1.csv  power_module_testing2.csv  power_module_testing3.csv  power_module_testing4.csv  todolist.txt
data/raw/: telemetry.csv
media/: Sample_Logging_Row.csv  Sample_Logging_Row.xlsx  wsf diagram v2
media/mc_media/: monte_carlo_shield_report.pdf.docx
monte-carlo-sim/: flat_disk.surf  geometry.py  math3d.py  mc-vis.ipynb  mc-vis.py  mcvis.ipynb  physics.py  readme.md  results.txt  shieldSurfGenerator.py  spaceforge-montecarlo.py
monte-carlo-sim/analysis/: mc-vis-mc3.html  mcvis-mc1.html  mcvis-mc5.html
monte-carlo-sim/mc_data/: mc_output1.csv  mc_output2.csv  mc_output3.csv  mc_output4.csv  mc_output5.csv  mc_output6.csv
monte-carlo-sim/stl_files/: j5_bowl.stl  mbe_spacecraft.stl  shield_generator_fusion360.py  shield_pyramid.stl
scheduler_dl/: graph_topology.json  sample_sim_log.csv  tasks1.txt
scheduler_dl/data/: logV1.csv
scheduler_dl/sim/: sim_idea.txt  simlogger.py
(+1 files in other folders)
